fixed image issues on mobile

--- a/src/css/portfolio.css
+++ b/src/css/portfolio.css
@@ -1,7 +1,7 @@
 .portfolio-images{
     display:flex;
     flex-direction: column;
-    margin:2rem;
+    margin:1rem;
     border: white solid;
     border-radius: 13rem;
     align-items: center;
@@ -11,7 +11,7 @@
 .portfolio-images img{
     border: white solid;
     border-radius: 3rem;
-    width: 350px;
+    width: 300px;;
     height: 300px
 }
 
@@ -29,11 +29,19 @@ figcaption{
     font-family: 'Yvanone Kaffeesatz', sans-serif;
     line-height: 1.5rem;
     text-align: center;
-    max-width: 400px;
+    max-width: 300px;
     margin:1rem 0 2rem 0;
     height:280px;
 }
-
+#fig-caption_text_1{
+    height: 120px
+}
+#fig-caption_text_2{
+    height:320px;
+}
+#fig-caption_text_3{
+    height:310px;
+}
 @media (min-width: 55rem){
     .portfolio-images{
         display: grid;
